# MediMart

./: .gitignore  push.bat  toado.txt
backend/ai/: .gitignore  README.md  cli.py  main.py  pyproject.toml
backend/ai/app/: main.py
backend/ai/app/api/: deps.py  router.py
backend/ai/app/api/endpoints/: chat.py  ocr.py
backend/ai/app/core/: config.py  llama_manager.py
backend/ai/app/prompts/: __init__.py  chat_system.txt  ocr_human.txt  ocr_system.txt
backend/ai/app/schemas/: ocr.py
backend/ai/app/services/: ocr_service.py
backend/ai/app/utils/: image_processing.py
backend/api/: .env.example  README.md  package-lock.json  package.json  server.js
backend/api/config/: supabase.js
backend/api/controllers/: authController.js  categoryController.js  orderController.js  productController.js  rewardController.js  userController.js
backend/api/middleware/: auth.js
backend/api/models/: Category.js  Order.js  (+2 more)
medimart-android/: settings.gradle.kts
medimart-android/gradle/: libs.versions.toml
medimart-backend/: fix_addresses.js  package-lock.json  server.js
medimart-backend/controllers/: authController.js  bannerController.js  categoryController.js  orderController.js  userController.js
medimart-backend/models/: Address.js  Banner.js
medimart-backend/routes/: categories.js  orders.js  users.js
medimart-backend/seed/: seed.js
mobile/: gradle.properties
mobile/app/: build.gradle.kts
mobile/gradle/: libs.versions.toml
supabase/: README.md
supabase/migrations/: 20260719000000_initial_medimart_schema.sql  20260719000001_enforce_rls.sql
(+146 files in other folders)
