[project]
name = "medimart-backend-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.2",
    "httpx>=0.28.1",
    "langchain>=1.3.14",
    "langchain-openai>=1.3.5",
    "langgraph>=1.2.9",
    "opencv-python-headless<=4.9.0.80",
    "paddleocr>=3.7.0",
    "paddlepaddle==3.2.2",
    "pillow>=12.3.0",
    "psutil>=7.2.2",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "uvicorn>=0.51.0",
]
